# ParamLib

./: CMakeLists.txt  ParamAverage.c  ParamAverage.h  ParamLib.c  ParamLib.h  ParamLib_Test.c  ParamState.c  ParamState.h  ParamValue.c  ParamValue.h  Readme.md
.github/workflows/: cmake-multi-platform.yml
